# industry_vis

./: .gitignore  AGENTS.md  README.md  README_CN.md  config.example.toml  eslint.config.js  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.md  justfile  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api/: commands.md  index.md  models.md
docs/en/: index.md
docs/en/api/: commands.md  index.md  models.md
docs/en/guide/: configuration.md  data-processing.md  data-query.md  export.md  getting-started.md  index.md  schema-profile.md  styling.md  visualization.md
docs/guide/: configuration.md  data-processing.md  data-query.md  export.md  getting-started.md  index.md  schema-profile.md  styling.md  visualization.md
openspec/: project.md
openspec/changes/init-industrial-data-viewer/: design.md  proposal.md  tasks.md
openspec/changes/init-industrial-data-viewer/specs/data-processing/: spec.md
openspec/changes/init-industrial-data-viewer/specs/data-source/: spec.md
openspec/changes/init-industrial-data-viewer/specs/data-visualization/: spec.md
openspec/changes/init-industrial-data-viewer/specs/desktop-app/: spec.md
scripts/: sync-version.js
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  config.rs  connection_pool.rs  data_processing.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  state.rs  tag_group.rs
src-tauri/src/cache/: mod.rs  query_cache.rs  warmup.rs
src-tauri/src/commands/: cache.rs  config.rs  mod.rs  query.rs  tag_group.rs
src-tauri/src/config/: app.rs  mod.rs  performance.rs  tag_groups.rs  watcher.rs
src-tauri/src/datasource/: mod.rs  pool.rs  schema_profile.rs  sqlserver.rs  traits.rs
src-tauri/src/datasource/profiles/: default.rs  mod.rs  registry.rs
src-tauri/src/models/: history.rs  mod.rs  processing.rs  query.rs  tag_group.rs
src-tauri/src/processing/: mod.rs  native.rs  polars_impl.rs
src-tauri/src/services/: mod.rs  query_service.rs  tag_group_service.rs
src/components/: ChartCard.vue  ConnectionSettings.vue  DataTable.vue  GroupEditView.vue  KpiCards.vue  LineChart.vue  PerformanceMonitor.vue  QueryToolbar.vue  TagGroupEditor.vue  TagGroupTree.vue  TagSearchModal.vue  TagSearchSelect.vue  TagSelector.vue  TimeRangeSelector.vue
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: config.ts  data.ts  tagGroup.ts  theme.ts
src/styles/: cyberpunk.css  glass.css  main.css  themes.css  tokens.css
src/types/: index.ts
src/views/: HomeView.vue  SettingsView.vue
