[package]
name = "industry-vis"
version = "0.2.0"
description = "工业数据可视化系统"
authors = ["you"]
edition = "2021"

[lib]
name = "industry_vis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# SQL Server
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

# Data processing
polars = { version = "0.44", features = [
    "lazy",
    "csv", 
    "dtype-datetime",
    "rolling_window",     # 移动窗口函数
    "dynamic_group_by",   # 时间序列重采样
    "round_series",       # 数值舍入
] }

# Caching
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 开发构建配置（快速编译）
[profile.dev]
incremental = true
opt-level = 0

# 依赖使用轻量优化（加速链接）
[profile.dev.package."*"]
opt-level = 1
debug = false

# 快速发布构建（日常测试用，只生成 exe）
[profile.release]
strip = true
lto = "thin"       # thin LTO 比 fat 快很多
codegen-units = 8  # 允许更多并行编译
panic = "abort"

# 最终发布构建（生成安装包用，最大优化）
[profile.dist]
inherits = "release"
lto = true         # fat LTO，最佳优化
codegen-units = 1  # 单线程编译，最佳优化
